--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
           <img src="../pic/Google__G__Logo.svg" alt="Google Logo" />
           <h2>Google登入</h2>
         </a>
-        <h2 class="or">or</h2>
+        <h2 class="commend">or</h2>
         <form action="/auth/login" method="POST">
           <div class="form-group">
             <label for="email"><i class="far fa-envelope"></i></label>
