--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
           <img src="../pic/Google__G__Logo.svg" alt="Google Logo" />
           <h2>Google註冊</h2>
         </a>
-        <h2 class="or">or</h2>
+        <h2 class="commend">or</h2>
         <form action="/auth/register" method="POST">
           <div class="form-group">
             <label for="username"><i class="fas fa-user-circle"></i></label>
