--- a/views/article-overview.ejs
+++ b/views/article-overview.ejs
@@ -7,7 +7,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <title>Register Page</title>
+    <title>圍棋遊記列表</title>
   </head>
   <body>
     <%- include("./partials/nav") %>
