--- a/views/go_travel.ejs
+++ b/views/go_travel.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include("./partials/header") %>
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <title>IGO Travel</title>
+    <title>Go Travel</title>
   </head>
   <body>
     <%- include("./partials/nav") %>
@@ -38,9 +38,7 @@
       <h1>我想來點不一樣的旅行</h1>
       <div class="catagory" id="catagory"></div>
     </div>
-    <footer>
-      <h3>copyright © 2021 Redturtle</h3>
-    </footer>
+    <%- include("./partials/footer") %>
     <script src="/script.js"></script>
     <script src="/travel_script.js"></script>
   </body>
