--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include("./partials/header") %>
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <title>Login Page</title>
+    <title>登入GoCommunity</title>
   </head>
   <body>
     <%- include("./partials/nav") %>
