--- a/public/style.scss
+++ b/public/style.scss
@@ -2,7 +2,7 @@ $primary-color: #ffda77;
 $secondary-color: #ffa45b;
 $word-dark-color: #2f4858;
 $light-blue-color: #8fcadf;
-$dark-blue-color: #3e77f3;
+$dark-blue-color: #225ad4;
 * {
   margin: 0;
   padding: 0;
@@ -207,7 +207,9 @@ nav.active {
           background-color: $primary-color;
           border: solid 3px $primary-color;
           color: #333;
+          font-weight: 500;
           cursor: pointer;
+          box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.8);
         }
         &:active {
           transform: scale(0.98);
@@ -365,6 +367,7 @@ nav.active {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        letter-spacing: 1px;
         p {
           padding: 1rem 0;
           font-size: 20px;
@@ -521,19 +524,46 @@ nav.active {
 // Login page (End)
 
 // International Home (Start)
+.clear-box {
+  clear: both;
+}
 .container {
+  .background-img {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    padding-top: 90px;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      height: 50vw;
+      object-fit: cover;
+      object-position: center center;
+      opacity: 0.07;
+    }
+  }
   .history {
     padding-top: 70px;
+    padding-bottom: 70px;
     .intro-box {
       max-width: 750px;
       width: 100%;
       padding: 10px;
       margin: 0 auto;
+      p {
+        margin-top: 10px;
+        font-size: 20px;
+        letter-spacing: 3px;
+        text-indent: 2em;
+      }
     }
     .timeline {
       margin: 50px 0;
       position: relative;
-      clear: both;
       li {
         display: flex;
         flex-direction: column;
@@ -810,16 +840,22 @@ main {
         object-position: center center;
         float: right;
         margin-left: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         border: solid 5px #fff;
         border-radius: 10px;
         box-shadow: 0px 5px 10px #555;
       }
       p {
         font-size: 20px;
+        letter-spacing: 2px;
+        text-indent: 2em;
+      }
+      a {
+        text-decoration: none;
+        color: $dark-blue-color;
       }
     }
-    .connect-box {
+    .connact-box {
       display: flex;
       justify-content: space-around;
       align-items: center;
@@ -1060,6 +1096,7 @@ main {
   // International page (Start)
   .container {
     .history {
+      padding-bottom: 0;
       .timeline {
         margin-top: 10px;
         li {
@@ -1240,6 +1277,9 @@ main {
           font-size: 24px;
           padding: 0.3rem 0.5rem;
         }
+        .intro {
+          justify-content: flex-start;
+        }
       }
     }
   }
@@ -1250,6 +1290,10 @@ main {
     max-width: 100%;
     padding: 0 5px;
     .history {
+      padding-top: 50px;
+      .intro-box {
+        padding-top: 0;
+      }
       .timeline {
         li {
           padding: 10px;
