--- a/views/go_international.ejs
+++ b/views/go_international.ejs
@@ -3,18 +3,30 @@
   <head>
     <%- include("./partials/header") %>
     <link rel="stylesheet" href="/style.css" />
-    <title>IGO International</title>
+    <title>國際交流</title>
   </head>
   <body>
     <%- include("./partials/nav") %>
     <div class="container">
+      <div class="background-img">
+        <img
+          src="./pic/AboutPage/GoCommunity_Logo_NoFill.svg"
+          alt="GoCommunity_Logo"
+        />
+      </div>
       <div class="history">
         <div class="intro-box">
-          <h1>intro</h1>
+          <h1>國際交流</h1>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias
-            rem, dolorum sapiente sit maxime rerum impedit quasi earum quaerat
-            unde?
+            2020~2021疫情肆虐，連一般的社交都難上不少。日本更是嚴重，不斷開關的緊急事態，不見停歇的確診人數，各行各業都大受打擊，圍棋產業也不例外，為了生存只能改變。
+          </p>
+          <p>
+            先是參加「圍棋咖啡Hidamari」嘗試了跨國間的線上圍棋交流，參加者來自各種不同國家，台灣、日本、紐西蘭、香港、美國...etc，靠著科技和手談的力量，雖然不同背景、母語、棋力，但也拉近不少距離。利用多人視訊下棋，對局時的環境音、對手的表情還有下完棋的嘴炮覆盤，這樣的交流也別有一番風味，也讓我萌生了舉辦交流的想法。
+          </p>
+          <p>
+            於是2021/2/6開始了第一次國際交流，原本想說選手們會因為語言隔閡而畏懼，但沒想到大家都使勁提升自己的溝通能力，彷彿自己出國自由行一樣(笑)，看著這樣愉快的交流也讓自己找到了存在感。從此之後也盡量一個月舉辦一次，交流對象也慢慢增加，區域也跨出了日本到香港，「圍棋咖啡
+            Hidamari」、「圍棋喫茶
+            樹林」、「碁人碁事」，之後會不會再增加我也不知道，我只想說雖然線上國際交流不錯，但我還是更想出國面對面下棋交流呀~~~~
           </p>
         </div>
         <ul class="timeline">
@@ -113,9 +125,11 @@
               <h1>未完待續...</h1>
             </a>
           </li>
+          <div class="clear-box"></div>
         </ul>
       </div>
     </div>
+    <%- include("./partials/footer") %>
     <script src="/script.js"></script>
   </body>
 </html>
