--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include("./partials/header") %>
     <link rel="stylesheet" type="text/css" href="/style.css" />
-    <title>Register Page</title>
+    <title>註冊GoCommunity</title>
   </head>
   <body>
     <%- include("./partials/nav") %>
