Fix overflow-x:hidden not working on smartphon

--- a/public/style.css
+++ b/public/style.css
@@ -38,8 +38,9 @@
           transform: scale(0.95);
 }
 
+html,
 body {
-  width: 100%;
+  width: 100vw;
   overflow-x: hidden;
   background-color: #f6f6f6;
   min-height: 100vh;
@@ -61,7 +62,7 @@ nav {
   position: fixed;
   left: 0;
   top: 0;
-  right: 0;
+  width: 100vw;
   background-color: #ffda77;
   padding: 1rem 0;
   z-index: 999;
